--- a/src/components/chatbox.module.css
+++ b/src/components/chatbox.module.css
@@ -1,15 +1,16 @@
 .chatpage{
     height: 100vh;
     display: flex;
+    width: 100vw;
     justify-content:space-around;
     align-items: center;
     flex-direction: column;
     background-color:rgb(156, 217, 212);
-        background: url(image1.jpg) center no-repeat;
-        background-blend-mode:hard-light;
-        position:relative;
-        background-size: cover;
-        opacity: inherit;
+    background: url(image1.jpg) center no-repeat;
+    background-blend-mode:hard-light;
+    position:relative;
+    background-size: cover;
+    opacity: inherit;
            
 }
 .signout{
@@ -19,7 +20,7 @@
 .chatbox{
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 500px;
     justify-content: space-between;
     height: 770px;
     border: 10px solid black;
@@ -88,3 +89,11 @@
     text-transform: uppercase;
 
   }
+
+@media screen and (max-width: 480px) {
+    .chatbox{
+        width: 100vw;
+    
+    }
+  
+}
